fix issue contrast

--- a/styles/form.css
+++ b/styles/form.css
@@ -5,7 +5,7 @@
   --text-light: #eeeeee;
   --text-dark: #000000;
   --shadow-light: #00000014;
-  --error-color: #ff0000;
+  --error-color: #940606;
   --success-color: #063f06;
   --submit-hover-color: #4a1255;
   --star-color: #cccccc;
